Fixed sizes of iframe and look of action buttons on IOS. Added spaces in part of block Inline elements.

--- a/src/stylus/content/index.styl
+++ b/src/stylus/content/index.styl
@@ -185,6 +185,7 @@ input, button, select, optgroup, textarea
 
 /*! Buttons */
 
+button,
 [type='submit'],
 [type='reset'],
 [type='button']
