--- a/src/stylus/content/preview.styl
+++ b/src/stylus/content/preview.styl
@@ -270,6 +270,11 @@ $caption--styled
     col(4)
     min-width: 250px
     flex-grow: 1
+  &-iframeWrap
+    // Fix sizes on IOS 
+    overflow: auto
+    -webkit-overflow-scrolling: touch
+    height: 500px
 
 
 //! Section Other
